style.css
/* import fonts */

@import url(//db.onlinewebfonts.com/c/379d2dced46dad50a81628e84d8fbb81?family=Inconsolata);

@font-face {
  font-family: 'Inconsolata';
  src: url('//db.onlinewebfonts.com/t/379d2dced46dad50a81628e84d8fbb81.eot');
  src: url('//db.onlinewebfonts.com/t/379d2dced46dad50a81628e84d8fbb81.eot?#iefix')
      format('embedded-opentype'),
    url('//db.onlinewebfonts.com/t/379d2dced46dad50a81628e84d8fbb81.woff2')
      format('woff2'),
    url('//db.onlinewebfonts.com/t/379d2dced46dad50a81628e84d8fbb81.woff')
      format('woff'),
    url('//db.onlinewebfonts.com/t/379d2dced46dad50a81628e84d8fbb81.ttf')
      format('truetype'),
    url('//db.onlinewebfonts.com/t/379d2dced46dad50a81628e84d8fbb81.svg#Inconsolata')
      format('svg');
}

@font-face {
  font-family: 'Playfair-Black';
  src: url('./fonts/PlayfairDisplay-Black.ttf') format('truetype');
}

@font-face {
  font-family: 'Playfair-Black-Italic';
  src: url('./fonts/PlayfairDisplay-BlackItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Playfair-Bold';
  src: url('./fonts/PlayfairDisplay-Bold.ttf') format('truetype');
}

@font-face {
  font-family: 'Playfair-Bolt-Italic';
  src: url('./fonts/PlayfairDisplay-BoldItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Playfair-Italic';
  src: url('./fonts/PlayfairDisplay-Italic.ttf') format('truetype');
}

@font-face {
  font-family: 'Playfair-Regular';
  src: url('./fonts/PlayfairDisplay-Regular.ttf') format('truetype');
}

@font-face {
  font-family: 'Ubuntu-Light';
  src: url('./fonts/Ubuntu-L.ttf') format('truetype');
}

/* General settings */

:root {
  --primary-color-100: #000000;
  --primary-color-70: #333333;
  --primary-color-40: #626262;
  --primary-color-20: #b4ad9e;
  --primary-color-10: #f0f0f0;
}

* {
  font-family: 'Playfair-Regular';
  box-sizing: border-box;
  color: var(--primary-color-40);
}

body {
  line-height: 1.8;
  font-size: 14px;
}

img {
  width: 100%;
  border-radius: 4px;
  padding: 0.2px;
}

h2 {
  letter-spacing: 2px;
  font-size: 30px;
}

@media screen and (max-width: 900px) {
  h2 {
    letter-spacing: 1.5px;
    font-size: 24px;
  }
}

@media screen and (max-width: 700px) {
  h2 {
    letter-spacing: 1px;
    font-size: 18px;
  }
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  cursor: pointer;
}

@media screen and (max-width: 400px) {
  p,
  q {
    font-size: 12px;
  }
}

/* atom classes */

.pd-0 {
  padding: 0;
}

.pd-50-bot {
  padding-bottom: 50px;
}

.mg-0 {
  margin: 0;
}

.mg-0-auto {
  margin: 0 auto;
}

.mg-20-right {
  margin-right: 20px;
}

.mg-20-left {
  margin-left: 20px;
}

.mg-30-top {
  margin-top: 30px;
}

.mg-30-bot {
  margin-bottom: 30px;
}

.mg-70-bot {
  margin-bottom: 70px;
}

.w-60 {
  width: 60vw;
}

@media screen and (max-width: 400px) {
  .w-60 {
    width: 70vw;
  }
}

.w-70 {
  width: 70vw;
}

@media screen and (max-width: 400px) {
  .w-70 {
    width: 80vw;
  }
}

.w-100 {
  width: 100%;
}

.min-width-70 {
  min-width: 70vw;
}

@media screen and (max-width: 400px) {
  .min-width-70 {
    min-width: 80vw;
  }
}

.rotate {
  transform: rotate(180deg);
}

.sign-up-form--btn__without-hover:hover {
  color: var(--primary-color-40);
}

@media screen and (min-width: 651px) {
  .header {
    display: grid;
    justify-content: space-between;
    grid-template-columns: 1fr 1fr;
  }
}

.header--links {
  list-style: none;
  display: flex;
  justify-content: space-between;
}

.header--link {
  font-size: 14px;
  color: var(--primary-color-100);
  padding: 10px;
}

@media screen and (max-width: 450px) {
  .header--link {
    font-size: 10px;
    color: var(--primary-color-100);
    padding: 5px;
  }
}

@media screen and (max-width: 650px) {
  .header--link__without-pl {
    padding-left: 0;
  }
}

.header--link__without-pr {
  padding-right: 0;
}

.header--logo {
  font-size: 30px;
  font-family: 'Inconsolata';
  color: var(--primary-color-100);
  letter-spacing: 5px;
}

.header--logo:hover {
  text-decoration: none;
}

.four-posts,
.last-posts {
  display: grid;
  justify-items: center;
  grid-template-columns: 1fr 1fr;
  grid-gap: 50px;
  grid-row-gap: 100px;
}

@media screen and (max-width: 850px) {
  .four-posts,
  .last-posts {
    grid-template-columns: 1fr;
  }
}

.sign-up-form-wrapper {
  display: flex;
  justify-content: center;
  margin: 70px 0px;
  padding: 50px 0px;
  background: var(--primary-color-10);
}

.sign-up-form {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
}

.sign-up-form--input {
  width: 270px;
  margin: 20px 0px 20px 20px;
  border: none;
  border-bottom: 1px solid;
  background: var(--primary-color-10);
  outline: none;
}

@media screen and (max-width: 400px) {
  .sign-up-form--input {
    width: 200px;
  }
}

.sign-up-form--input:active {
  border: none;
  border-bottom: 1px solid;
}

.sign-up-form--caption {
  width: 100%;
  color: var(--primary-color-70);
}

.sign-up-form--btn {
  margin: 20px 20px 20px 0px;
  border-bottom: 1px solid;
}

footer {
  padding: 30px 0;
  background-color: var(--primary-color-10);
  margin-top: 30px;
}

.footer {
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
  width: 60vw;
}

.footer--img {
  width: auto;
}

.post {
  width: auto;
  max-height: 600px;
  overflow: hidden;
}

.post--category {
  color: var(--primary-color-20);
  font-family: 'Ubuntu-Light';
}

.load-more {
  font-size: 20px;
  width: 160px;
  height: 60px;
  margin: 100px auto;
  display: block;
}

button:hover {
  cursor: pointer;
}

.footer--follow {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
}

.social-icons {
  display: flex;
}

@media screen and (max-width: 500px) {
  .footer--follow {
    flex-wrap: wrap;
    justify-content: center;
  }
}

/* second page style */

.post-detail--quote {
  margin: 40px;
  display: block;
}

@media screen and (max-width: 400px) {
  .post-detail--quote {
    margin: 10px;
  }
}

.share--icon-f,
.share--icon-t,
.share--icon-i {
  opacity: 0.65;
}

.share--icon-g,
.share--icon-p {
  opacity: 0.4;
}

.share--img {
  width: 15px;
  height: 15px;
}

.share--span {
  color: var(--primary-color-20);
}

.share {
  display: flex;
  justify-content: flex-end;
  margin: 50px 0;
}

.three-posts-wrapper {
  display: grid;
  width: 60vw;
  grid-template-columns: 1fr;
  margin: 0 auto;
  padding: 50px 0;
}

.three-posts {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
}

@media screen and (max-width: 800px) {
  .three-posts {
    grid-template-columns: 1fr;
  }
}

.three-posts-wrapper--text {
  margin: 0 0 50px 0;
}

.three-posts-section {
  background-color: var(--primary-color-10);
  margin: 50px 0;
}

.rounded {
  border-radius: 50%;
  width: 70px;
  height: 70px;
}

@media screen and (max-width: 400px) {
  .rounded {
    width: 50px;
    height: 50px;
  }
}

.comments {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: flex-start;
  margin: 50px 0;
}

.comments--comment-text {
  margin: 10px 0;
}

.comments-wrapper--new-comment {
  justify-content: flex-start;
}

.comments--wrapper-textarea {
  height: 70px;
  border-radius: 5px;
  border: 1px solid;
}

.comments--textarea {
  border: none;
  height: 100%;
  width: 100%;
  padding: 25px;
  overflow: hidden;
}

.connect-social {
  display: flex;
  justify-content: flex-end;
}

.aside {
  max-width: 250px;
}

.aside-wrapper {
  width: 100%;
  position: sticky;
  top: 30px;
}

.article-with-aside {
  width: 70vw;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 5vw;
  justify-items: end;
}

.full-post {
  grid-column: span 2;
  width: 40vw;
}

.aside--post-name {
  margin: 10px 0;
}

.aside--post-text {
  font-size: 12px;
  max-height: 69px;
  overflow: hidden;
}

.aside--next-post {
  margin: 50px 0;
}

.comments-qty {
  font-size: 10px;
}

.aside--banner {
  filter: saturate(0.2);
}

/* slider styles */

.container {
  position: relative;
}

.slider {
  overflow: hidden;
  max-height: 70vh;
}

.slider-line {
  display: flex;
  position: relative;
  transition: all ease 1s;
  left: 0;
  max-height: 70vh;
}

.slider--img {
  max-height: 70vh;
  object-fit: cover;
}

.slider--next {
  position: absolute;
  top: 45%;
  right: 0;
  font-size: 30px;
  background: none;
  border: none;
  color: var(--primary-color-100);
  visibility: hidden;
}

.slider--prev {
  position: absolute;
  top: 45%;
  left: 0;
  font-size: 30px;
  background: none;
  border: none;
  color: var(--primary-color-100);
  visibility: hidden;
}

.slider--arrow {
  width: 30px;
  height: 30px;
  background-color: var(--primary-color-10);
  padding: 5px;
  opacity: 0.5;
}

.slider--arrow__visible {
  visibility: visible;
}

